tests/ParserTests/StructGrammar.txt
START -> PROG

PROG -> REPTPROG0  

REPTYPETPROG0 ->  

ARRAYSIZE -> lsqbr ARRAYSIZE2  .
ARRAYSIZE2 -> intlit rsqbr .
ARRAYSIZE2 -> rsqbr .

STRUCT -> STRUCTDECL   
 
STRUCTDECL -> struct id OPTSTRUCTDECL2 lcurbr REPTSTRUCTDECL4 rcurbr semi  

OPTSTRUCTDECL2 -> inherits id REPTOPTSTRUCTDECL22  . 
OPTSTRUCTDECL2 ->  . 

REPTOPTSTRUCTDECL22 -> comma id REPTOPTSTRUCTDECL22  . 
REPTOPTSTRUCTDECL22 ->  . 

REPTSTRUCTDECL4 -> VISIBILITY MEMBERDECL REPTSTRUCTDECL4  . 
REPTSTRUCTDECL4 ->  . 

VISIBILITY -> public  . 
VISIBILITY -> private  .

MEMBERDECL -> FUNCDECL  . 
MEMBERDECL -> VARDECL  . 

FUNCDECL -> FUNCHEAD semi  .
FUNCHEAD -> func id lpar FPARAMS rpar arrow RETURNTYPE  .

FPARAMS -> id colon TYPE REPTFPARAMS3 REPTFPARAMS4  . 
FPARAMS ->  .

TYPE -> integer  . 
TYPE -> float  . 
TYPE -> id  .

REPTFPARAMS3 -> ARRAYSIZE REPTFPARAMS3  . 
REPTFPARAMS3 ->  . 


REPTFPARAMS4 -> FPARAMSTAIL REPTFPARAMS4  . 
REPTFPARAMS4 ->  . 

REPTFPARAMSTAIL4 -> ARRAYSIZE REPTFPARAMSTAIL4  . 
REPTFPARAMSTAIL4 ->  .

ARRAYSIZE -> lsqbr ARRAYSIZE2  .
ARRAYSIZE2 -> intlit rsqbr .
ARRAYSIZE2 -> rsqbr .

FPARAMSTAIL -> comma id colon TYPE REPTFPARAMSTAIL4  .

RETURNTYPE -> TYPE  . 
RETURNTYPE -> void  .

VARDECL -> let id colon TYPE REPTVARDECL4 semi  . 
REPTVARDECL4 -> ARRAYSIZE REPTVARDECL4  . 
REPTVARDECL4 ->  . 
